// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewDropDownTest renders with isContextMenuVisible = false 1`] = `
<div
  className="details-view-dropdown"
  data-automation-id="gear-button"
>
  <StyledLinkBase
    className="gearButton"
    onClick={[Function]}
  >
    <StyledIconBase
      ariaLabel="Manage Settings"
      className="gearOptionsIcon"
      data-automation-id="gear-options-icon"
      iconName="Gear"
    />
  </StyledLinkBase>
</div>
`;

exports[`DetailsViewDropDownTest renders with isContextMenuVisible = true 1`] = `
<div
  className="details-view-dropdown"
  data-automation-id="gear-button"
>
  <StyledLinkBase
    className="gearButton"
    onClick={[Function]}
  >
    <StyledIconBase
      ariaLabel="Manage Settings"
      className="gearOptionsIcon"
      data-automation-id="gear-options-icon"
      iconName="Gear"
    />
  </StyledLinkBase>
  <StyledWithResponsiveMode
    calloutProps={
      Object {
        "className": "detailsViewDropdownCallout",
      }
    }
    directionalHint={6}
    directionalHintForRTL={4}
    gapSpace={12}
    id="settings-dropdown-menu"
    items={
      Array [
        Object {
          "iconProps": Object {
            "iconName": "contactCard",
          },
          "key": "my-test-item",
          "name": "My test item",
          "onClick": null,
        },
      ]
    }
    onDismiss={[Function]}
    shouldFocusOnMount={true}
    target={null}
  />
</div>
`;
